dev/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintrack-ui
  namespace: fintrack
spec:
  type: NodePort
  selector:
    app: fintrack-ui
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 1080
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 31080
